# nav_light

./: .clang-format  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.kk
components/button/: CMakeLists.txt
components/lcd/: iot_lcd.cpp  spi_lcd.c
components/lcd/include/: WProgram.h
components/led_strip/include/: led_strip.h
components/led_strip/src/: led_strip_rmt_ws2812.c
components/light_handle/: CMakeLists.txt
components/light_handle/include/: light_handle.h
components/lvgl_gui/: lv_conf.h
main/: CMakeLists.txt  accuracy.hpp  aliyun_light_example.c  app_camera.c  app_screen.cpp  chars.hpp  light_example.c  link.lf  main.cpp  main_easypr.cpp  nav_light.c  plate.hpp  system.cpp
main/core/: chars_segment.cpp  core_func.cpp  feature.cpp  plate_detect.cpp  plate_locate.cpp
main/include/: app_screen.h  board_def.h
main/include/easypr/: config.h
main/opencv/opencv2/: opencv_modules.hpp
main/util/: util.cpp
